--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: rgb(121,44,195);
 background: linear-gradient(90deg, rgba(121,44,195,1) 0%, rgba(143,113,194,1) 26%, rgba(0,221,255,1) 100%);
-font-family: 'Courier New', Courier, monospace;
+/* font-family: 'Courier New', Courier, monospace; */
 }
 button{
   cursor: pointer;
