--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,4 +1,3 @@
-.Tilt{
-    background: rgb(121,44,195);
-background: linear-gradient(90deg, rgba(121,44,195,1) 0%, rgba(143,113,194,1) 26%, rgba(0,221,255,1) 100%);
+.Tilt {
+  background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%); /* w3c */
 }
