--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
 body {
   margin: 0;
-  padding: 0;
-  font-family: "Courier New", Courier, monospace;
-  background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%); /* w3c */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: rgb(121,44,195);
+background: linear-gradient(90deg, rgba(121,44,195,1) 0%, rgba(143,113,194,1) 26%, rgba(0,221,255,1) 100%);
+/* font-family: 'Courier New', Courier, monospace; */
 }
-
-button {
+button{
   cursor: pointer;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
